--- a/CarMeets Android App/app/src/main/res/menu/bottom_navigation.xml
+++ b/CarMeets Android App/app/src/main/res/menu/bottom_navigation.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/nav_meetings"
         android:icon="@drawable/ic_list_black_24dp"
-        android:title="@string/bottom_navigation_home" />
+        android:title="@string/menu_home" />
 
     <item
             android:id="@+id/nav_favorieten"
             android:icon="@drawable/ic_heartcheck_black_24dp"
-            android:title="@string/bottom_navigation_favorieten" />
+            android:title="@string/menu_favorieten" />
 
     <item
             android:id="@+id/nav_account"
             android:icon="@drawable/ic_account_black_24dp"
-            android:title="@string/bottom_navigation_account" />
+            android:title="@string/menu_account" />
 
 </menu>
