--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetinglijst.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetinglijst.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-            android:id="@+id/textview_meetinglijstitem_temptekst"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/item_meeting_titel"
-    />
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/meeting_lijst"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_meeting" />
 
 </android.support.constraint.ConstraintLayout>
