HOTFIX: app builde niet
wegens enkel maken van gui niet getest of app builde, en dat deed ze dus niet :-), nu wel!

--- a/CarMeets Android App/app/src/main/res/layout/item_meeting.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="225dp"
                 android:scaleType="centerCrop"
-                app:srcCompat="@tools:sample/backgrounds/scenic"
+                app:srcCompat="@drawable/auto"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
