item gemaakt met kleinere img

--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetinglijst.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetinglijst.xml
@@ -10,6 +10,6 @@
             android:id="@+id/meeting_lijst"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/item_meeting" />
+            tools:listitem="@layout/item_meeting_klein" />
 
 </android.support.constraint.ConstraintLayout>
