--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_groot.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_groot.xml
@@ -15,9 +15,12 @@
         <ImageView
                 android:id="@+id/item_meeting_afbeelding"
                 android:layout_width="match_parent"
-                android:layout_height="225dp"
+                app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/auto"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop ="15dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
@@ -26,10 +29,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/item_meeting_titel"
-                android:textAlignment="center"
                 android:textSize="24sp"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:textColor="@android:color/black"
                 app:layout_constraintTop_toBottomOf="@+id/item_meeting_afbeelding"
                 app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +44,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/item_meeting_subtitel"
                 android:textSize="18sp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/item_meeting_titel"/>
@@ -52,8 +54,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/item_meeting_locatie"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="10dp"
                 android:drawableLeft="@drawable/ic_location_pink_20dp"
