--- a/CarMeets Android App/app/src/main/res/menu/toolbar.xml
+++ b/CarMeets Android App/app/src/main/res/menu/toolbar.xml
@@ -14,4 +14,16 @@
             android:id="@+id/nav_zoek"
             android:icon="@drawable/ic_search_white_24dp"
             app:showAsAction="always"/>
+
+    <item
+            android:title="@string/ab_opties_groot"
+            android:id="@+id/ab_opties_klein"
+            android:icon="@drawable/ic_search_white_24dp"
+            app:showAsAction="never"/>
+
+    <item
+            android:title="@string/ab_opties_klein"
+            android:id="@+id/ab_opties_groot"
+            android:icon="@drawable/ic_search_white_24dp"
+            app:showAsAction="never"/>
 </menu>
