--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_groot.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_groot.xml
@@ -15,6 +15,7 @@
         <ImageView
                 android:id="@+id/item_meeting_afbeelding"
                 android:layout_width="match_parent"
+                android:layout_height="0dp"
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/auto"
