--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_klein.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_klein.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardCornerRadius="7dp"
@@ -13,9 +13,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+        <android.support.constraint.Guideline
+                android:id="@+id/guideline_40_links"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.4" />
+
         <ImageView
                 android:id="@+id/item_meeting_afbeelding"
-                android:layout_width="150dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_40_links"
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/auto"
@@ -27,9 +36,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 />
 
+
         <TextView
                 android:id="@+id/item_meeting_titel"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/guideline_40_links"
                 android:text="@string/item_meeting_titel"
                 android:textSize="14sp"
                 android:textColor="@android:color/black"
@@ -41,7 +53,9 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <TextView
                 android:id="@+id/item_meeting_subtitel"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/guideline_40_links"
                 android:text="@string/item_meeting_subtitel"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/item_meeting_afbeelding"
@@ -52,7 +66,9 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
                 android:id="@+id/item_meeting_locatie"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/guideline_40_links"
                 android:text="@string/item_meeting_locatie"
                 android:textSize="10sp"
                 android:drawableLeft="@drawable/ic_location_pink_13dp"
