--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
@@ -17,36 +17,77 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-    <android.support.constraint.ConstraintLayout android:id="@+id/rectangle_at_the_top"
-                                                 android:layout_alignParentTop="true"
-                                                 android:background="@color/colorPrimary" android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout android:layout_alignParentTop="true"
+                                                 android:background="@android:color/white"
+                                                 android:layout_width="0px"
+                                                 app:layout_constraintHorizontal_weight="1"
                                                  android:layout_height="wrap_content"
+                                                 app:layout_constraintEnd_toEndOf="parent"
+                                                 android:paddingBottom="8dp"
+                                                 android:paddingTop="8dp"
+                                                 android:layout_marginEnd="10dp"
+                                                 android:id="@+id/partial_meetingdetail_likedgoing"
+                                                 app:layout_constraintBottom_toTopOf="@+id/partial_meetingdetail_date"
+                                                 app:layout_constraintStart_toStartOf="@+id/partial_meetingdetail_date">
+
+        <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/icon_meetdetail_like"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_heart_black_24dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
+
+        <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/icon_meetdetail_going"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_check_black_24dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout android:layout_alignParentTop="true"
+                                                 android:background="@color/colorPrimary"
+                                                 android:layout_width="wrap_content"
+                                                 android:layout_height="wrap_content"
+                                                 app:layout_constraintHorizontal_weight="1"
                                                  app:layout_constraintTop_toBottomOf="@+id/item_meeting_afbeelding"
-                                                 app:layout_constraintEnd_toEndOf="parent">
+                                                 app:layout_constraintEnd_toEndOf="parent"
+                                                 android:layout_marginEnd="10dp"
+                                                 android:paddingLeft="10dp"
+                                                 android:paddingRight="10dp"
+                                                 android:paddingBottom="8dp"
+                                                 android:id="@+id/partial_meetingdetail_date">
 
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@android:color/white"
                 android:textAlignment="center"
-                android:id="@+id/textView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/textView_meetingdetail_dateday"
+                android:textSize="34dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/item_meeting_dateday"
-                />
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+        />
 
 
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@android:color/white"
-                android:id="@+id/textView2"
+                android:id="@+id/textView_meetingdetail_datemonth"
                 android:textAlignment="center"
+                android:textSize="18dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/textView_meetingdetail_dateday"
                 android:text="@string/item_meeting_datemonth"
-        />
+                app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
