--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
@@ -35,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_heart_black_24dp"
+
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
 
         <android.support.v7.widget.AppCompatImageView
@@ -42,6 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_check_black_24dp"
+
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
 
 
@@ -73,7 +76,6 @@
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
         />
 
-
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -89,5 +91,158 @@
                 android:text="@string/item_meeting_datemonth"
                 app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
+
+
+    <TextView
+            android:id="@+id/textView_meetingdetail_titel"
+            android:text="@string/item_meeting_titel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintTop_toBottomOf="@+id/item_meeting_afbeelding"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
+
+            android:textSize="24sp"
+            android:textColor="@android:color/black"
+
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"/>
+
+    <TextView
+            android:id="@+id/textView_meetingdetail_subtitel"
+            android:text="@string/item_meeting_subtitel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintTop_toBottomOf="@+id/textView_meetingdetail_titel"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
+
+            android:textSize="18sp"
+
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"/>
+
+    <View
+            android:id="@+id/seperator_meetingdetail_ondersubtitel"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_meetingdetail_subtitel"
+            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"/>
+
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seperator_meetingdetail_ondersubtitel"
+
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+    >
+
+        <android.support.constraint.ConstraintLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                    android:id="@+id/textView_meetingdetail_beschrijving"
+                    android:text="@string/item_meeting_beschrijving"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            <Button
+                    android:id="@+id/button_meetingdetail_notificatie"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+
+                    android:drawableLeft="@drawable/ic_add_alert_pink_18dp"
+                    android:drawableRight="@drawable/ic_add_alert_pink_18dp"
+                    android:text="@string/button_meeting_notificatie"
+
+
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_meetingdetail_beschrijving"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+            <Button
+                    android:id="@+id/button_meetingdetail_agenda"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+
+                    android:drawableLeft="@drawable/ic_add_agenda_pink_18dp"
+                    android:drawableRight="@drawable/ic_add_agenda_pink_18dp"
+                    android:text="@string/button_meeting_agenda"
+
+
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_notificatie"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+            <Button
+                    android:id="@+id/button_meetingdetail_route"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+
+                    android:drawableLeft="@drawable/ic_navigation_pink_18dp"
+                    android:drawableRight="@drawable/ic_navigation_pink_18dp"
+                    android:text="@string/button_meeting_routebeschrijving"
+
+
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_agenda"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+            />
+
+            <Button
+                    android:id="@+id/button_meetingdetail_website"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+
+                    android:drawableLeft="@drawable/ic_link_pink_18dp"
+                    android:drawableRight="@drawable/ic_link_pink_18dp"
+                    android:text="@string/button_meeting_website"
+
+
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_route"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+            />
+
+
+        </android.support.constraint.ConstraintLayout>
+
+    </ScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
