ondersteuning voor tablet + conventies
meetinglijst kan nu op tablet weergegeven worden namelijk 50 links is de lijst en rechts is de detail pagina.

--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetinglijst.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetinglijst.xml
@@ -8,7 +8,7 @@
         android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/meeting_lijst"
+            android:id="@+id/recyclerview_meeting_lijst"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_meeting_klein"
