--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_klein.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_klein.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content">
 
         <android.support.constraint.Guideline
-                android:id="@+id/guideline_40_links"
+                android:id="@+id/guideline_40percent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -24,7 +24,7 @@
                 android:id="@+id/item_meeting_afbeelding"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline_40_links"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_40percent"
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/auto"
@@ -41,7 +41,7 @@
                 android:id="@+id/item_meeting_titel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@+id/guideline_40_links"
+                app:layout_constraintStart_toStartOf="@+id/guideline_40percent"
                 android:text="@string/item_meeting_titel"
                 android:textSize="14sp"
                 android:textColor="@android:color/black"
@@ -55,7 +55,7 @@
                 android:id="@+id/item_meeting_subtitel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@+id/guideline_40_links"
+                app:layout_constraintStart_toStartOf="@+id/guideline_40percent"
                 android:text="@string/item_meeting_subtitel"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/item_meeting_afbeelding"
@@ -63,12 +63,13 @@
                 android:layout_marginTop="2dp"
                 app:layout_constraintTop_toBottomOf="@+id/item_meeting_titel"
                 android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/item_meeting_locatie"/>
         <TextView
                 android:id="@+id/item_meeting_locatie"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@+id/guideline_40_links"
+                app:layout_constraintStart_toStartOf="@+id/guideline_40percent"
                 android:text="@string/item_meeting_locatie"
                 android:textSize="10sp"
                 android:drawableLeft="@drawable/ic_location_pink_13dp"
@@ -77,7 +78,8 @@
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+        />
 
     </android.support.constraint.ConstraintLayout>
 
