--- a/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
 <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
@@ -169,25 +170,20 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"/>
 
-    <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider_meetingdetail_ondersubtitel"
-
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp">
 
         <android.support.constraint.ConstraintLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
+                app:layout_constraintTop_toBottomOf="@+id/divider_meetingdetail_ondersubtitel"
+
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/text_meetingdetail_beschrijving"
@@ -268,6 +264,7 @@
 
         </android.support.constraint.ConstraintLayout>
 
-    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
