--- a/CarMeets Android App/app/src/main/res/layout/activity_main.xml
+++ b/CarMeets Android App/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,9 @@
     <android.support.v7.widget.Toolbar
             android:id="@+id/menu_main_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:minHeight="60dp"
+            app:layout_constrainedHeight="true"
             android:background="?attr/colorPrimary"
 
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
