--- a/CarMeets Android App/app/src/main/res/menu/bottom_navigation.xml
+++ b/CarMeets Android App/app/src/main/res/menu/bottom_navigation.xml
@@ -9,7 +9,7 @@
     <item
             android:id="@+id/nav_favorieten"
             android:icon="@drawable/ic_heartcheck_black_24dp"
-            android:title="@string/menu_favorieten" />
+            android:title="@string/menu_favourites" />
 
     <item
             android:id="@+id/nav_account"
