--- a/CarMeets Android App/app/src/main/res/menu/bottom_navigation.xml
+++ b/CarMeets Android App/app/src/main/res/menu/bottom_navigation.xml
@@ -7,7 +7,7 @@
         android:title="@string/menu_home" />
 
     <item
-            android:id="@+id/nav_favorieten"
+            android:id="@+id/nav_favourites"
             android:icon="@drawable/ic_heartcheck_black_24dp"
             android:title="@string/menu_favourites" />
 
