--- a/CarMeets Android App/app/src/main/res/menu/toolbar.xml
+++ b/CarMeets Android App/app/src/main/res/menu/toolbar.xml
@@ -3,14 +3,14 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-            android:title="notificaties"
+            android:title="@string/ab_notifications"
             android:id="@+id/nav_notificaties"
             android:icon="@drawable/ic_notifications_white_24dp"
             app:actionLayout="@layout/partial_notificationbell"
             app:showAsAction="always"/>
 
     <item
-            android:title="zoeken"
+            android:title="@string/ab_search"
             android:id="@+id/nav_zoek"
             android:icon="@drawable/ic_search_white_24dp"
             app:showAsAction="always"/>
