--- a/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout-land/fragment_meetingdetail.xml
@@ -3,175 +3,184 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            >
-<android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+>
 
 
-    <ImageView
-            android:id="@+id/image_meetingdetail_header"
+    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-
-            app:layout_constraintDimensionRatio="H,16:9"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/auto"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    <android.support.constraint.ConstraintLayout
-            android:id="@+id/partial_meetingdetail_likedgoing"
-            android:layout_width="0px"
             android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            android:layout_alignParentTop="true"
-            android:background="@android:color/white"
-            app:layout_constraintHorizontal_weight="1"
+        <!-- De meeting afbeelding -->
+        <ImageView
+                android:id="@+id/image_meetingdetail_header"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/partial_meetingdetail_date"
-            app:layout_constraintStart_toStartOf="@+id/partial_meetingdetail_date"
+                app:layout_constraintDimensionRatio="H,16:9"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/auto"
 
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp"
-            android:layout_marginEnd="10dp">
-
-        <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/image_meetingdetail_like"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:src="@drawable/ic_heart_black_24dp"
-
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-                android:layout_marginStart="8dp"/>
-
-        <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/image_meetingdetail_going"
-                android:layout_width="wrap_content"
+        <!-- liked going iconen -->
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/partial_meetingdetail_likedgoing"
+                android:layout_width="0px"
                 android:layout_height="wrap_content"
 
-                android:src="@drawable/ic_check_black_24dp"
+                android:layout_alignParentTop="true"
+                android:background="@android:color/white"
+                app:layout_constraintHorizontal_weight="1"
 
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/partial_meetingdetail_date"
+                app:layout_constraintStart_toStartOf="@+id/partial_meetingdetail_date"
 
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp"
+                android:layout_marginEnd="10dp">
+
+            <!-- like icoon -->
+            <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/image_meetingdetail_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:src="@drawable/ic_heart_black_24dp"
+
+                    app:layout_constraintStart_toStartOf="parent"
+
+                    android:layout_marginStart="8dp"/>
+
+            <!-- going icoon -->
+            <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/image_meetingdetail_going"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:src="@drawable/ic_check_black_24dp"
+
+                    app:layout_constraintEnd_toEndOf="parent"
+
+                    android:layout_marginEnd="8dp"/>
+
+
+        </android.support.constraint.ConstraintLayout>
+
+        <!-- de dag en maand -->
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/partial_meetingdetail_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_alignParentTop="true"
+                android:background="@color/colorPrimary"
+
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintTop_toBottomOf="@+id/image_meetingdetail_header"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                android:layout_marginEnd="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="8dp">
+
+            <!-- de dag -->
+            <TextView
+                    android:id="@+id/text_meetingdetail_dateday"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:textColor="@android:color/white"
+                    android:textAlignment="center"
+                    android:textSize="34dp"
+                    android:text="@string/item_meeting_dateday"
+
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"/>
+
+            <!-- de maand -->
+            <TextView
+                    android:id="@+id/textView_meetingdetail_datemonth"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:textColor="@android:color/white"
+                    android:textAlignment="center"
+                    android:textSize="18dp"
+                    android:text="@string/item_meeting_datemonth"
+
+
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_dateday"
+                    app:layout_constraintBottom_toBottomOf="parent"
+
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"/>
+
+        </android.support.constraint.ConstraintLayout>
+
+        <!-- titel -->
+        <TextView
+                android:id="@+id/text_meetingdetail_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+
+                android:text="@string/item_meeting_title"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+
+                app:layout_constraintTop_toBottomOf="@+id/image_meetingdetail_header"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
+
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"/>
 
-
-    </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-            android:id="@+id/partial_meetingdetail_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_alignParentTop="true"
-            android:background="@color/colorPrimary"
-
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintTop_toBottomOf="@+id/image_meetingdetail_header"
-            app:layout_constraintEnd_toEndOf="parent"
-
-            android:layout_marginEnd="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="8dp">
-
+        <!-- subtitel -->
         <TextView
-                android:id="@+id/text_meetingdetail_dateday"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:id="@+id/text_meetingdetail_subtitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
 
-                android:textColor="@android:color/white"
-                android:textAlignment="center"
-                android:textSize="34dp"
-                android:text="@string/item_meeting_dateday"
+                android:textSize="18sp"
+                android:text="@string/item_meeting_subtitle"
 
+                app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_title"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
 
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"/>
 
-        <TextView
-                android:id="@+id/textView_meetingdetail_datemonth"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                android:textColor="@android:color/white"
-                android:textAlignment="center"
-                android:textSize="18dp"
-                android:text="@string/item_meeting_datemonth"
+        <!-- mooie scheidingslijn tussen subtitel en beschrijving -->
+        <View
+                android:id="@+id/divider_meetingdetail_undersubtitle"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
 
 
-                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@android:color/darker_gray"
+
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_dateday"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_subtitle"
+                app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
 
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"/>
 
-    </android.support.constraint.ConstraintLayout>
-
-
-    <TextView
-            android:id="@+id/text_meetingdetail_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-
-            android:text="@string/item_meeting_title"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"
-
-            app:layout_constraintTop_toBottomOf="@+id/image_meetingdetail_header"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
-
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
-
-    <TextView
-            android:id="@+id/text_meetingdetail_subtitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
-            android:textSize="18sp"
-            android:text="@string/item_meeting_subtitle"
-
-            app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
-
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
-
-    <View
-            android:id="@+id/divider_meetingdetail_undersubtitle"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-
-
-            android:background="@android:color/darker_gray"
-
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_subtitle"
-            app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
-
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
-
-
-
+        <!-- beschrijving + knoppen -->
         <android.support.constraint.ConstraintLayout
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/partial_meetingdetail_date"
@@ -185,6 +194,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+            <!-- beschrijving -->
             <TextView
                     android:id="@+id/text_meetingdetail_description"
                     android:layout_width="match_parent"
@@ -194,6 +204,7 @@
 
                     app:layout_constraintTop_toTopOf="parent"/>
 
+            <!-- notificaties -->
             <Button
                     android:id="@+id/button_meetingdetail_notification"
                     android:layout_width="0dp"
@@ -211,6 +222,7 @@
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"/>
 
+            <!-- agenda -->
             <Button
                     android:id="@+id/button_meetingdetail_agenda"
                     android:layout_width="0dp"
@@ -228,6 +240,7 @@
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"/>
 
+            <!-- route -->
             <Button
                     android:id="@+id/button_meetingdetail_route"
                     android:layout_width="0dp"
@@ -244,7 +257,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"/>
-
+            <!-- website -->
             <Button
                     android:id="@+id/button_meetingdetail_website"
                     android:layout_width="0dp"
@@ -264,7 +277,6 @@
 
         </android.support.constraint.ConstraintLayout>
 
-
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </ScrollView>
