--- a/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_meetinglist.xml
+++ b/CarMeets Android App/app/src/main/res/layout-w600dp/fragment_meetinglist.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- De layout van lijst voor tablets, met detail als twopane -->
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +10,7 @@
 
         android:orientation="vertical">
 
+    <!-- virtuele scheidingslijn  -->
     <android.support.constraint.Guideline
             android:id="@+id/guide_meetinglist_45percent_vertical"
             android:layout_width="wrap_content"
@@ -17,6 +19,7 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.45"/>
 
+    <!-- de lijst -->
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview_meetinglist"
             android:layout_width="0dp"
@@ -32,7 +35,7 @@
 
             android:layout_marginEnd="8dp"/>
 
-
+    <!-- visuele scheidingslijn -->
     <View
             android:id="@+id/divider_meetinglist_45percent"
             android:layout_width="2dp"
@@ -46,6 +49,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"/>
 
+    <!-- detail container -->
     <FrameLayout
             android:id="@+id/frame_meetinglist_meetingdetailcontainer"
             android:layout_width="0dp"
