--- a/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- een placeholder met logo en tekst over ontstaan -->
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,7 +9,7 @@
 
         android:orientation="vertical">
 
-
+    <!-- logo -->
     <ImageView
             android:id="@+id/imageview_logo"
             android:layout_width="match_parent"
@@ -26,6 +27,7 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"/>
 
+    <!-- scheidingslijn voor 50 50 -->
     <android.support.constraint.Guideline
             android:id="@+id/guideline_50percent_horizontal"
             android:layout_width="wrap_content"
@@ -34,6 +36,7 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5"/>
 
+    <!-- Tekst over ontstaan -->
     <TextView
             android:id="@+id/text_placeholderlogo"
             android:layout_width="match_parent"
