--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_big.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_big.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 1 lijst item BIG -->
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+        <!-- afbeelding -->
         <ImageView
                 android:id="@+id/image_itemmeeting"
                 android:layout_width="match_parent"
@@ -33,6 +35,8 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginTop ="15dp"/>
+
+        <!-- titel -->
         <TextView
                 android:id="@+id/text_itemmeeting_title"
                 android:layout_width="match_parent"
@@ -50,6 +54,8 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="8dp"/>
+
+        <!-- subtitel -->
         <TextView
                 android:id="@+id/text_itemmeeting_subtitle"
                 android:layout_width="match_parent"
@@ -64,6 +70,8 @@
 
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"/>
+
+        <!-- locatie -->
         <TextView
                 android:id="@+id/text_itemmeeting_location"
                 android:layout_width="match_parent"
