--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_small.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_small.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 1 lijst item SMALL -->
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+        <!-- virtuele scheidingslijn verticaal 40% -->
         <android.support.constraint.Guideline
                 android:id="@+id/guideline_itemmeetingklein_40percent_vertical"
                 android:layout_width="wrap_content"
@@ -23,6 +25,7 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.4" />
 
+        <!-- afbeelding -->
         <ImageView
                 android:id="@+id/image_itemmeeting"
                 android:layout_width="0dp"
@@ -42,7 +45,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp" />
 
-
+        <!-- titel -->
         <TextView
                 android:id="@+id/text_itemmeeting_title"
                 android:layout_width="0dp"
@@ -60,6 +63,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"/>
 
+        <!-- subtitel -->
         <TextView
                 android:id="@+id/text_itemmeeting_subtitle"
                 android:layout_width="0dp"
@@ -77,6 +81,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="8dp" />
 
+        <!-- locatie -->
         <TextView
                 android:id="@+id/text_itemmeeting_location"
                 android:layout_width="0dp"
