Binding en xml cleanup
xml is nu beter door gebruikt tools en kotlin checker laten lopen. binding op detail adhv selected meeting

--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_small.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_small.xml
@@ -3,6 +3,7 @@
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +35,8 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline_itemmeetingklein_40percent_vertical"
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/auto"
+                tools:src="@drawable/auto"
+                android:contentDescription="@string/item_meeting_img_alt"
 
 
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -51,9 +53,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
-                android:text="@string/item_meeting_title"
+                tools:text="Android app celibration"
                 android:textSize="14sp"
                 android:textColor="@android:color/black"
+
                 app:layout_constraintStart_toStartOf="@+id/guideline_itemmeetingklein_40percent_vertical"
                 app:layout_constraintStart_toEndOf="@+id/image_itemmeeting"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -69,16 +72,16 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
-                android:text="@string/item_meeting_subtitle"
+                tools:text="Een android app vieren met een gepaste meeting"
                 android:textSize="12sp"
+
                 app:layout_constraintStart_toStartOf="@+id/guideline_itemmeetingklein_40percent_vertical"
                 app:layout_constraintStart_toEndOf="@+id/image_itemmeeting"
                 app:layout_constraintTop_toBottomOf="@+id/text_itemmeeting_title"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/text_itemmeeting_location"
 
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="2dp"
                 android:layout_marginEnd="8dp" />
 
         <!-- locatie -->
@@ -87,7 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
-                android:text="@string/item_meeting_location"
+                tools:text="9260, Schellebelle"
                 android:textSize="10sp"
                 android:drawableLeft="@drawable/ic_location_pink_13dp"
 
