--- a/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_placeholder_logo.xml
@@ -25,7 +25,8 @@
 
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"
+            android:contentDescription="@string/carmeets_logo_alt"/>
 
     <!-- scheidingslijn voor 50 50 -->
     <android.support.constraint.Guideline
@@ -43,7 +44,7 @@
             android:layout_height="wrap_content"
 
             android:text="@string/about_carmeets"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textAlignment="center"
 
             app:layout_constraintStart_toStartOf="parent"
