--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_big.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_big.xml
@@ -3,6 +3,7 @@
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,8 +26,7 @@
 
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/auto"
-
+                tools:src="@drawable/auto"
 
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +34,8 @@
 
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginTop ="15dp"/>
+                android:layout_marginTop ="15dp"
+                android:contentDescription="@string/item_meeting_img_alt"/>
 
         <!-- titel -->
         <TextView
@@ -42,10 +43,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:text="@string/item_meeting_title"
+                tools:text="Android app celibration"
                 android:textSize="24sp"
                 android:textColor="@android:color/black"
-
 
                 app:layout_constraintTop_toBottomOf="@+id/image_itemmeeting"
                 app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:text="@string/item_meeting_subtitle"
+                tools:text="Een android app vieren met een gepaste meeting"
                 android:textSize="18sp"
 
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:text="@string/item_meeting_location"
+                tools:text="9260, Schellebelle"
                 android:drawableLeft="@drawable/ic_location_pink_20dp"
 
                 app:layout_constraintStart_toStartOf="parent"
