Manuele location objecten
nosql db heeft geen location object dus manueel eentje maken voor mooiere casting

--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
@@ -28,7 +28,7 @@
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
                 tools:src="@drawable/auto"
-                android:src="@{meetingViewModel.getSelectedMeeting().afbeeldingNaam}"
+                android:src="@{meetingViewModel.getSelectedMeeting().imageName}"
                 android:contentDescription="@string/item_meeting_img_alt"
 
                 app:layout_constraintTop_toTopOf="parent"
