--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_big.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_big.xml
@@ -26,7 +26,7 @@
 
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
-                tools:src="@drawable/auto"
+                tools:src="@tools:sample/backgrounds/scenic"
 
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
