--- a/CarMeets Android App/app/src/main/res/layout/item_meeting_small.xml
+++ b/CarMeets Android App/app/src/main/res/layout/item_meeting_small.xml
@@ -35,7 +35,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline_itemmeetingklein_40percent_vertical"
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
-                tools:src="@drawable/auto"
+                tools:src="@tools:sample/backgrounds/scenic"
                 android:contentDescription="@string/alt_item_meeting_img"
 
 
