Code cleanup PT1

--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetinglist.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetinglist.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
 
             tools:listitem="@layout/item_meeting_small"
-            app:layoutManager="LinearLayoutManager"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
