--- a/CarMeets Android App/app/src/main/res/layout/activity_main.xml
+++ b/CarMeets Android App/app/src/main/res/layout/activity_main.xml
@@ -1,54 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- de main activity met toolbar en bottom navigation en holder voor fragment -->
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<!-- de main activity met menu_toolbar en bottom navigation en holder voor fragment -->
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <import type="android.view.View"/>
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        <variable
+                name="guiViewModel"
+                type="com.lennertbontinck.carmeetsandroidapp.viewmodels.GuiViewModel"/>
+    </data>
 
-        android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-            android:id="@+id/menu_main_toolbar"
+    <android.support.constraint.ConstraintLayout
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:minHeight="60dp"
-            app:layout_constrainedHeight="true"
-            android:background="?attr/colorPrimary"
+            android:layout_height="match_parent"
 
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:theme="@style/ToolbarTheme"
-            app:titleTextAppearance="@style/ToolbarTheme.ToolbarTextAppearance.Title"
-            app:subtitleTextAppearance="@style/ToolbarTheme.ToolbarTextAppearance.Subtitle"
+            android:orientation="vertical">
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/menu_main_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:minHeight="60dp"
+                app:layout_constrainedHeight="true"
+                android:background="?attr/colorPrimary"
 
-            app:title="@string/ab_meetings_title"
-            app:subtitle="@string/ab_meetings_subtitle"/>
+                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                app:theme="@style/ToolbarTheme"
+                app:titleTextAppearance="@style/ToolbarTheme.ToolbarTextAppearance.Title"
+                app:subtitleTextAppearance="@style/ToolbarTheme.ToolbarTextAppearance.Subtitle"
 
-    <FrameLayout
-            android:id="@+id/frame_main_fragmentcontainer"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/menu_main_toolbar"
-            app:layout_constraintBottom_toTopOf="@id/menu_main_bottomnavigation"/>
+                app:title="@{guiViewModel.actionBarTitle}"
+                tools:title="@string/ab_meetings_title"
+                app:subtitle="@{guiViewModel.actionBarSubTitle}"
+                tools:subtitle="@string/ab_meetings_subtitle"
+        />
 
-    <android.support.design.widget.BottomNavigationView
-            android:id="@+id/menu_main_bottomnavigation"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <FrameLayout
+                android:id="@+id/frame_main_fragmentcontainer"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
 
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/menu_main_toolbar"
+                app:layout_constraintBottom_toTopOf="@id/menu_main_bottomnavigation"/>
 
-            app:menu="@menu/bottom_navigation"/>
+        <android.support.design.widget.BottomNavigationView
+                android:id="@+id/menu_main_bottomnavigation"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                app:menu="@menu/menu_bottom_navigation"/>
 
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</layout>
