--- a/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_meetingdetail.xml
@@ -29,7 +29,7 @@
                 app:layout_constraintDimensionRatio="H,16:9"
                 android:scaleType="centerCrop"
                 tools:src="@tools:sample/backgrounds/scenic"
-                android:src="@{meetingViewModel.getSelectedMeeting().imageName}"
+                android:src="@{meetingViewModel.selectedMeeting.imageName}"
                 android:contentDescription="@string/alt_item_meeting_img"
 
                 app:layout_constraintTop_toTopOf="parent"
@@ -110,7 +110,7 @@
                     android:textAlignment="center"
                     android:textSize="34sp"
                     tools:text="23"
-                    android:dayInMonth="@{meetingViewModel.getSelectedMeeting().date}"
+                    android:dayInMonth="@{meetingViewModel.selectedMeeting.date}"
 
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +128,7 @@
                     android:textAlignment="center"
                     android:textSize="18sp"
                     tools:text="Dec"
-                    android:shortMonthName="@{meetingViewModel.getSelectedMeeting().date}"
+                    android:shortMonthName="@{meetingViewModel.selectedMeeting.date}"
 
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +147,7 @@
                 android:layout_height="wrap_content"
 
                 tools:text="Android app celibration"
-                android:text="@{meetingViewModel.getSelectedMeeting().title}"
+                android:text="@{meetingViewModel.selectedMeeting.title}"
                 android:textSize="24sp"
                 android:textColor="@android:color/black"
 
@@ -167,7 +167,7 @@
 
                 android:textSize="18sp"
                 tools:text="Een android app vieren met een gepaste meeting"
-                android:text="@{meetingViewModel.getSelectedMeeting().subtitle}"
+                android:text="@{meetingViewModel.selectedMeeting.subtitle}"
 
                 app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_title"
                 app:layout_constraintStart_toStartOf="parent"
@@ -221,7 +221,7 @@
                         android:layout_height="wrap_content"
 
                         tools:text="Niet alleen is Lennert zijn GTI eindelijk af, ook zijn studies zijn bijna afgerond! Dankzij deze android app zou hij namelijk een stap dichter moeten komen naar zijn diploma! als dat maar goed afloopt."
-                        android:text="@{meetingViewModel.getSelectedMeeting().description}"
+                        android:text="@{meetingViewModel.selectedMeeting.description}"
 
                         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -231,8 +231,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
-                        android:drawableLeft="@drawable/ic_add_agenda_pink_18dp"
-                        android:drawableRight="@drawable/ic_add_agenda_pink_18dp"
+                        android:drawableStart="@drawable/ic_add_agenda_pink_18dp"
+                        android:drawableEnd="@drawable/ic_add_agenda_pink_18dp"
                         android:text="@string/btn_meeting_agenda"
 
                         app:layout_constraintTop_toBottomOf="@+id/text_meetingdetail_description"
@@ -249,8 +249,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
-                        android:drawableLeft="@drawable/ic_navigation_pink_18dp"
-                        android:drawableRight="@drawable/ic_navigation_pink_18dp"
+                        android:drawableStart="@drawable/ic_navigation_pink_18dp"
+                        android:drawableEnd="@drawable/ic_navigation_pink_18dp"
                         android:text="@string/btn_meeting_route"
 
                         app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_agenda"
@@ -267,11 +267,11 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
 
-                        android:drawableLeft="@drawable/ic_link_pink_18dp"
-                        android:drawableRight="@drawable/ic_link_pink_18dp"
+                        android:drawableStart="@drawable/ic_link_pink_18dp"
+                        android:drawableEnd="@drawable/ic_link_pink_18dp"
                         android:text="@string/btn_meeting_website"
 
-                        android:visibility='@{TextUtils.isEmpty(meetingViewModel.getSelectedMeeting().website) ? View.GONE : View.VISIBLE}'
+                        android:visibility='@{TextUtils.isEmpty(meetingViewModel.selectedMeeting.website) ? View.GONE : View.VISIBLE}'
 
                         app:layout_constraintTop_toBottomOf="@+id/button_meetingdetail_route"
                         app:layout_constraintEnd_toEndOf="parent"
