--- a/CarMeets Android App/app/src/main/res/values/styles.xml
+++ b/CarMeets Android App/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:textAppearanceButton">@style/TextAppearance.AppCompat.Button.Custom</item>
     </style>
 
     <!-- action bar niet weergeven -->
@@ -26,6 +28,10 @@
 
     <style name="ToolbarTheme.ToolbarTextAppearance.Title">
         <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="TextAppearance.AppCompat.Button.Custom">
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="ToolbarTheme.ToolbarTextAppearance.Subtitle">
