Change password fragment + controller + werking

--- a/CarMeets Android App/app/src/main/res/layout/fragment_manage_account.xml
+++ b/CarMeets Android App/app/src/main/res/layout/fragment_manage_account.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
 
             android:textColor="@android:color/black"
-            android:text="@string/txt_manage_account_change_password"
+            android:text="@string/txt_change_password"
             android:background="@color/lightGrey"
 
             app:layout_constraintStart_toStartOf="@id/guideline_manage_account_10percent_vertical"
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
 
             android:textColor="@android:color/black"
-            android:text="@string/txt_manage_account_change_username"
+            android:text="@string/txt_change_username"
             android:background="@color/lightGrey"
 
             app:layout_constraintStart_toStartOf="@id/guideline_manage_account_10percent_vertical"
@@ -96,7 +96,7 @@
             android:layout_height="wrap_content"
 
             android:textColor="#000"
-            android:text="@string/txt_manage_account_change_email"
+            android:text="@string/txt_change_email"
             android:background="@color/lightGrey"
 
             app:layout_constraintStart_toStartOf="@id/guideline_manage_account_10percent_vertical"
